apply plugin: 'java'
apply plugin: 'jacoco'
apply plugin: 'application'


sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

mainClassName = 'Aplicacao.Main'

tasks.withType(JavaCompile) {
 options.encoding = 'UTF-8'
 options.fork = true
}

jar {
    zip64=true
    archiveBaseName = 'ProjetoDevNovo'
    manifest {
        attributes 'Main-Class': application.mainClass
    }

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    from { 
        configurations.runtimeClasspath.collect { 
            it.isDirectory() ? it : zipTree(it) 
        } 
    } {
        exclude 'META-INF/.RSA', 'META-INF/.SF', 'META-INF/*.DSA'
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
}

dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.20'
      testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
      testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     
}

test{
    useJUnitPlatform()
}

tasks.withType(Test) {
        useJUnitPlatform()
        jvmArgs '--enable-preview'
    }